# cvxpy-or

./: CLAUDE.md  README.md  pyproject.toml
docs/: installation.md  quickstart.md
examples/: assignment_problem.py  blending_problem.py  diet_problem.py  facility_location.py  multi_period_transportation.py
src/cvxpy_or/: __init__.py  aggregations.py  constraints.py  display.py  io.py  model.py  pandas_io.py  sets.py  validation.py  xarray_io.py
tests/: test_aggregations.py  test_model.py  test_sets.py  test_validation.py  test_xarray_io.py
