[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvxpy-or"
version = "0.1.0"
description = "Operations Research-style modeling for CVXPY"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "cvxpy>=1.4",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cvxpy_or"]
