[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvxpy-or"
version = "0.1.0"
description = "Operations Research-style modeling for CVXPY"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "cvxpy>=1.4",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
display = ["rich>=13.0"]
all = [
    "pandas>=1.5",
    "rich>=13.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "pandas>=1.5",
    "rich>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cvxpy_or"]
