[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvxpy-or"
version = "0.1.0"
description = "Operations Research-style modeling for CVXPY"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "cvxpy>=1.4",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
display = ["rich>=13.0"]
all = [
    "pandas>=1.5",
    "rich>=13.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "pandas>=1.5",
    "rich>=13.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
]
lint = [
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cvxpy_or"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cvxpy_or"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
